manifests/kubevirt/VMs/mediacms.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediacms-svc
spec:   
  ports:
  - port: 22
    protocol: TCP
    targetPort: 22
    name: ssh
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    kubevirt.io/domain: mediacms
  type: ClusterIP
